package pouvoirs;

public class ContactMortel extends Pouvoir{
    public ContactMortel(){
        super("Contact Mortel");
    }
}
