package pouvoirs;

public class Coureur extends Pouvoir{
    public Coureur(){
        super("Coureur");
    }
}
