package pouvoirs;

public class NombreusesVies extends Pouvoir{
    public NombreusesVies() {
        super("Nombreuses vies");
    }
}
