@startuml
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam style strictuml
hide empty members

class Main{
  +{static} main(args: String[*])
}

package typeCarte{
    abstract class Carte <<abstract>>
    {
        - m_nom : String
        - m_pointAttaque : Integer
        - m_pointDeVie : Integer
        - m_gouttesDeSang : Integer
        - m_os : Integer
        - m_volant : Boolean
        + <<Create>> Carte(nom : String, PV : Integer)
        + <<Create>> Carte(nom : String, pointAttaque : Integer, PV : Integer, gouttesDeSang : Integer, os : Integer, volant : Boolean)
        + attaquer(other : Carte)
        + infligerDegats(degats : Integer)
        + getNom() : String
        + getPV() : Integer
        + getAttaque() : Integer
        + reduireAttaque(valeur : Integer)
        + getGouttesSang() : Integer
        + getOs() : Integer
        + getVolant() : Boolean
        + isSacrifiable() : Boolean
        + toString() : String
    }
    abstract class Animal extends Carte{
        - m_pouvoir : Optional
        +<<Create>> Animal(nom : String, pointAttaque : Integer, PV : Integer, gouttesDeSang : Integer, os : Integer, volant : Boolean, pouvoir : FonctionPouvoir)
        + isSacrifiable() : Boolean
        + getPouvoir() : Optional
    }
    abstract class Obstacle extends Carte{
        + <<Create>> Obstacle(PV : Integer, nom : String)
    }
}

package pouvoirs{
    interface FonctionPouvoir <<interface>>{
        + getNom() : String
        + onAttaque(carte : Animal, joueur : Joueur, adversaire : Joueur)
        + onDefense(carte : Animal, joueur : Joueur, adversaire : Joueur)
    }

    abstract class PouvoirAbstrait <<abstract>> implements FonctionPouvoir{
        + onAttaque(carte : Animal, joueur : Joueur, adversaire : Joueur)
        + onDefense(carte : Animal, joueur : Joueur, adversaire : Joueur)
    }

    class Puant extends PouvoirAbstrait{
        + getNom() : String
        + onAttaque(carte : Animal, joueur : Joueur, adversaire : Joueur)
    }
    class NombreusesVies extends PouvoirAbstrait{
        + getNom() : String
        + onSacrifice(carte : Animal, joueur : Joueur)
    }
    class Croissance extends PouvoirAbstrait{
        - m_nbTours : Integer
        + getNom() : String
        + onDebutTour(carte : Animal, joueur : Joueur, adversaire : Joueur)
    }
    class Coureur extends PouvoirAbstrait{
        + getNom() : String
        + onAttaque(carte : Animal, joueur : Joueur, adversaire : Joueur)
    }
    class ContactMortel extends PouvoirAbstrait{
        + getNom() : String
        + onAttaque(carte : Animal, joueur : Joueur, adversaire : Joueur)
    }
    class PiquesPointues extends PouvoirAbstrait{
        + getNom() : String
        + onDefense(carte : Animal, joueur : Joueur, adversaire : Joueur)
    }
}

package factory{
    class CarteFactory{
        +{static} createChat() : Animal
        +{static} createGrizzly() : Animal
        +{static} createCoyote() : Animal
        +{static} createMoineau() : Animal
        +{static} createCorbeau() : Animal
        +{static} createEcureuil() : Animal
        +{static} createHermine() : Animal
        +{static} createLouveteau() : Animal
        +{static} createLoup() : Animal
        +{static} createPunaise() : Animal
        +{static} createElan() : Animal
        +{static} createVipere() : Animal
        +{static} createPorcEpic() : Animal
        +{static} createRocher() : Obstacle
        +{static} createSapin() : Obstacle
    }
}

package gameplay{
    package jeu{
        class Jeu {
            + <<Create>> Jeu()
            + demarrerJeu()
        }

        class Partie{
            - m_differenceScore : Integer
            - m_numeroPartie : Integer
            +<<Create>> Partie(numPartie : Integer)
            + demarrerPartie() : String
            + choixCartePioche()
            + toString() : String
        }

        class Joueur{
            - m_scoreJoueur : Integer
            - m_os : Integer
            +<<Create>> Joueur()
            + getScoreJoueur() : Integer
            + getPlateau()
            + getMain()
            + getOsJoueur() : Integer
            + ajouterOs(montant : Integer)
            + retirerOs(montant : Integer)
            + piocher()
            + getSizePioche() : Integer
            + poserCarte(carte : Animal, cellule : Integer)
            + poserCarteOs(carte : Animal) : Boolean
            + poserCarteSang(carte : Animal) : Boolean
            + sacrificeCarte(carte : Animal, nbCarteASacrifier : Integer, sacrificeRestant : Integer) : Integer
            + placerCarte(carte : Animal, cellule : Integer)
            + attaquer(autre : Joueur)
            + debutTour(adversaire : Joueur)
            + toString() : String
        }

        class Robot extends Joueur{
            +<<Create>> Robot(joueur : Joueur)
            + jouerTour()
            + tourProchain() : Optional
            + poserCarteRobot(carte : Animal, cellule : Integer)
            + osRobot(carte : Animal) : Boolean
            + sacrificeRobot(carte : Animal) : Boolean
            + toString() : String
        }

        class Pioche{
            +<<Create>> Pioche(player : Joueur)
            + initPioche()
            + getTaillePioche() : Integer
            + getPioche()
            + piocher()
            + toString()
        }
    }

    package affichage{
        class Affichage{
            +{static} afficherPlateau(plateau : Optional[])
            +{static} afficherMain(main : ArrayList)
        }
    }
}

Main .> gameplay.jeu.Jeu : <<use>>
gameplay.jeu.Joueur ..> factory.CarteFactory : <<use>>

Jeu .> Partie : <<use>>

FonctionPouvoir .> typeCarte.Animal : <<use>>
FonctionPouvoir .> gameplay.jeu.Joueur : <<use>>

Partie .> Joueur : <<use>>
Partie .> typeCarte.Animal : <<use>>
Partie .> factory.CarteFactory : <<use>>

Affichage .> typeCarte.Carte : <<use>>
Affichage .> typeCarte.Animal : <<use>>

Animal o--> "0..1" pouvoirs.FonctionPouvoir : m_pouvoir

Robot o--> "1" Joueur : m_other

Joueur *--> "0..*" typeCarte.Animal : m_pioche\nm_mainJoueur
Joueur *--> "0..*" typeCarte.Carte : m_plateau

Pioche *--> "0..*" typeCarte.Animal : m_pioche
Pioche o--> "1" Joueur : m_joueur

CarteFactory ..> pouvoirs.Puant : <<instantiate>>
CarteFactory ..> pouvoirs.NombreusesVies : <<instantiate>>
CarteFactory ..> pouvoirs.Croissance : <<instantiate>>
CarteFactory ..> pouvoirs.Coureur : <<instantiate>>
CarteFactory ..> pouvoirs.ContactMortel : <<instantiate>>
CarteFactory ..> pouvoirs.PiquesPointues : <<instantiate>>

@enduml